# homework10_1

./: .env.example  README.md  main.py  pyproject.toml
logs/: mylog.txt
src/: decorators.py  external_api.py  generators.py  logger.py  macks.py  main.py  processing.py  utils.py  widget.py
tests/: conftest.py  test.xlsx  test_decorators.py  test_external_api.py  test_generators.py  test_main.py  test_masks.py  test_new_data.py  test_processing.py  test_utils.py
tests/logs/: mylog.txt
